--- a/Presentations/Server.WebAPI/Server.WebAPI.csproj
+++ b/Presentations/Server.WebAPI/Server.WebAPI.csproj
@@ -5,10 +5,18 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <UserSecretsId>9830b6e6-79ac-4822-9a5a-a0c445fba52c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Applications\Apps.Auth\Apps.Auth.csproj" />
+    <ProjectReference Include="..\..\Infrastructures\Infra.EFCore\Infra.EFCore.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />
   </ItemGroup>
 
 </Project>
