--- a/Presentations/Server.WebAPI/Server.WebAPI.csproj
+++ b/Presentations/Server.WebAPI/Server.WebAPI.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
+    <InvariantGlobalization>False</InvariantGlobalization>
     <UserSecretsId>9830b6e6-79ac-4822-9a5a-a0c445fba52c</UserSecretsId>
   </PropertyGroup>
 
