--- a/Domains/Domains.Auth/Domains.Auth.csproj
+++ b/Domains/Domains.Auth/Domains.Auth.csproj
@@ -9,5 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />
+	</ItemGroup>
 
 </Project>
