--- a/Presentations/Server.WebAPI/Server.WebAPI.csproj
+++ b/Presentations/Server.WebAPI/Server.WebAPI.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Applications\Apps.Auth\Apps.Auth.csproj" />
+    <ProjectReference Include="..\..\Applications\Apps.Messaging\Apps.Messaging.csproj" />
     <ProjectReference Include="..\..\Infrastructures\Infra.EFCore\Infra.EFCore.csproj" />
     <ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />
   </ItemGroup>
