--- a/Applications/Apps.Messaging/Apps.Messaging.csproj
+++ b/Applications/Apps.Messaging/Apps.Messaging.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domains\Domains.Messaging\Domains.Messaging.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />   
+  </ItemGroup>
+
 </Project>
