--- a/Infrastructures/Infra.EFCore/Infra.EFCore.csproj
+++ b/Infrastructures/Infra.EFCore/Infra.EFCore.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Repositories\Messaging\GroupRequesters\" />
   </ItemGroup>
 
 </Project>
