--- a/Domains/Domains.Messaging/Domains.Messaging.csproj
+++ b/Domains/Domains.Messaging/Domains.Messaging.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Domains.Auth\Domains.Auth.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="GroupMemberEntity\Models\" />
+  </ItemGroup>
+
 </Project>
