--- a/Presentations/Client.WebAssembly/Client.WebAssembly.csproj
+++ b/Presentations/Client.WebAssembly/Client.WebAssembly.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Shared\" />
+  </ItemGroup>
+
 </Project>
