--- a/Presentations/Server.WebAPI/Server.WebAPI.csproj
+++ b/Presentations/Server.WebAPI/Server.WebAPI.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink.12.0" Version="12.0.0" />
     <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.0-dev-00806" />
